roles/mongodb/files/30-statefulset.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongo
  namespace: mongo
spec:
  serviceName: "mongo"
  replicas: 3
  selector:
    matchLabels:
      role: mongo
  template:
    metadata:
      labels:
        role: mongo
        environment: test
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo:4.2.0
          imagePullPolicy: IfNotPresent
          command:
            - "mongod"
            - "--replSet"
            - "rs0"
            - "--bind_ip"
            - "0.0.0.0"
            #- "smallfiles"
            #- "--noprealloc"
          ports:
            - containerPort: 27017
              hostPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
        - name: mongo-sidecar
          image: cvallance/mongo-k8s-sidecar
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 5G
