roles/mongodb/files/20-headless-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: mongo
  labels:
    name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
